--- a/staff/nicolas-postigo/index.sass
+++ b/staff/nicolas-postigo/index.sass
@@ -26,7 +26,8 @@ header
     
 .off
     display: none
-.section__main
+
+.access
     display: flex
     flex-direction: column
     align-items: center
@@ -102,7 +103,71 @@ input
     align-content: center
 
 .welcome
-    margin-left: 25vw
     font-family: $main-font
     font-size: 30px
     color: #0a6495
+    text-align: center
+
+.welcome__image
+    width: 50vw
+    height: 50vw
+
+.logOut
+    display: flex
+    flex-direction: column
+    align-content: flex-end
+    align-items: flex-end
+    margin-right: 15vw
+
+.logOut__button
+    font-family: $main-font
+    font-size: 18px
+    margin-left: 15vw
+    margin-top: 5vw
+    height: 5vh
+    width: 30vw
+    background-color: #0a6495
+    color: white
+    border-radius: 6px
+
+.logOut__symbol
+    padding: 1vw 
+    color: white
+    font-size: 25px
+
+.save
+    font-family: $main-font
+    font-size: 18px
+    margin-top: 5vw
+    height: 5vh
+    width: 14vw
+    background-color: #0a6495
+    color: white
+    border-radius: 6px
+
+.profile
+    display: flex
+    flex-direction: column
+    align-items: center
+    align-content: center
+    
+.profile__form
+    display: flex
+    flex-direction: column
+    align-items: center
+    align-content: center
+    margin-top: 20px
+    input
+        height: 4vh
+        width: 50vw
+        margin: 3px
+
+.profile__button
+    font-family: $main-font
+    font-size: 18px
+    margin-top: 5vw
+    height: 5vh
+    width: 50vw
+    background-color: #0a6495
+    color: white
+    border-radius: 6px
