likes works thank U Manu

--- a/staff/nicolas-postigo/index.sass
+++ b/staff/nicolas-postigo/index.sass
@@ -162,12 +162,28 @@ input
         width: 50vw
         margin: 3px
 
-.profile__button
+.profile_button
     font-family: $main-font
     font-size: 18px
     margin-top: 5vw
     height: 5vh
-    width: 50vw
+    width: 20vw
     background-color: #0a6495
     color: white
     border-radius: 6px
+.search_button
+    font-family: $main-font
+    font-size: 18px
+    margin-top: 5vw
+    height: 5vh
+    width: 20vw
+    background-color: #0a6495
+    color: white
+    border-radius: 6px
+.button_container
+    display: flex
+    flex-direction: row
+    align-items: center
+    align-content: center
+    text-align: center
+    margin-left: 27vw
