--- a/staff/nicolas-postigo/index.css
+++ b/staff/nicolas-postigo/index.css
@@ -195,15 +195,39 @@ input {
   margin: 3px;
 }
 
-.profile__button {
+.profile_button {
   font-family: "Merriweather Sans", sans-serif;
   font-size: 18px;
   margin-top: 5vw;
   height: 5vh;
-  width: 50vw;
+  width: 20vw;
   background-color: #0a6495;
   color: white;
   border-radius: 6px;
+}
+
+.search_button {
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 18px;
+  margin-top: 5vw;
+  height: 5vh;
+  width: 20vw;
+  background-color: #0a6495;
+  color: white;
+  border-radius: 6px;
+}
+
+.button_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  margin-left: 27vw;
+}
+
+.search_form {
+  width: 50vw;
 }
 
 /*# sourceMappingURL=index.css.map */
