--- a/staff/nicolas-postigo/index.sass
+++ b/staff/nicolas-postigo/index.sass
@@ -2,28 +2,32 @@ $main-font: 'Merriweather Sans', sans-serif
 
 h2
     font-family: $main-font
-    font-size: 17px
+    font-size: 25px
     color: #0a6495
-    margin-left: 9vw
+    align-items: center
+    text-align: center
+    margin-right: 40px
+
 .register__form
     display: flex
     align-content: top
     align-items: top
+
 .logo
     margin-left: 12vw
     width: 40vh
     margin-top: 3vh
-   
+
 body
     padding: 0px
     margin: 0px
-   
+
 header
     width: 45vw
     align-content: center
     align-items: center
     margin-left: 30vw
-    
+
 .off
     display: none
 
@@ -41,6 +45,7 @@ header
     background-color: #0a6495
     color: white
     border-radius: 6px
+
 .register__button2
     font-family: $main-font
     font-size: 18px
@@ -53,7 +58,8 @@ header
 input
     height: 4vh
     width: 80vw
-    margin: 3px 
+    margin: 3px ´
+
 .register__confirm
     display: flex
     flex-direction: column
@@ -63,7 +69,7 @@ input
     display: flex
     align-content: center
     align-items: center
-    
+
 .register__confirm__button
     font-family: $main-font
     font-size: 18px
@@ -82,14 +88,20 @@ input
     background-color: #0a6495
     color: white
     border-radius: 6px
-.h2
+
+.h3
+    font-family: $main-font
+    font-size: 30px
+    color: #0a6495
     align-items: center
     text-align: center
+
 .register__form
     display: flex
     flex-direction: column
     align-items: center
     align-content: center
+
 .login__form
     display: flex
     flex-direction: column
@@ -109,8 +121,8 @@ input
     text-align: center
 
 .welcome__image
-    width: 50vw
-    height: 50vw
+    width: 80vw
+    height: 80vw
 
 .logOut
     display: flex
@@ -131,7 +143,7 @@ input
     border-radius: 6px
 
 .logOut__symbol
-    padding: 1vw 
+    padding: 1vw
     color: white
     font-size: 25px
 
@@ -150,7 +162,7 @@ input
     flex-direction: column
     align-items: center
     align-content: center
-    
+
 .profile__form
     display: flex
     flex-direction: column
@@ -158,9 +170,11 @@ input
     align-content: center
     margin-top: 20px
     input
-        height: 4vh
-        width: 50vw
+        height: 6vh
+        width: 80vw
         margin: 3px
+        font-family: $main-font
+        font-size: 22px
 
 .profile_button
     font-family: $main-font
@@ -187,3 +201,15 @@ input
     align-content: center
     text-align: center
     margin-left: 27vw
+
+.countries_form
+    height: 6vh
+    width: 80vw
+    font-family: $main-font
+    font-size: 16px
+
+.detail-covid
+    display: flex
+    flex-direction: column
+    align-items: center
+    align-content: center
