empiezo con logic de la app

--- a/staff/nicolas-postigo/huertea-app/src/components/Home.sass
+++ b/staff/nicolas-postigo/huertea-app/src/components/Home.sass
@@ -6,13 +6,7 @@
     width: 65vw
     border-radius: 15px
     height: 25px
-.searchtype
-    display: grid
-    border-radius: 2.5px  
-    background-color: #62ccd8
-    height: 25px
-    margin-top: 2px
-    margin-bottom: 2px
+
 .homebuttons
     display: flex
     justify-content: flex-start
@@ -30,5 +24,15 @@
         font-weight: bold
 
 
-.slidebar
-    position: absolute
+
+.search_form
+    margin: 20px
+
+
+.tags
+    background-color: #62ccd8
+    color: white
+    height: 7vh
+    width: 17vw
+    font-size: 100%
+    border: 2px solid brown
