--- a/staff/nicolas-postigo/huertea-app/src/components/Hub.sass
+++ b/staff/nicolas-postigo/huertea-app/src/components/Hub.sass
@@ -7,13 +7,16 @@
     border-radius: 15px
     height: 25px
 
-.homebuttons
-    display: subgrid
+.hubbuttons
+    display: flex
+    justify-content: flex-start
+    flex-direction: row
     height: 5vh
-    width: 30vw
+    margin: 2vw
     border: none
     background-color: #a9e78e
     color: white
+    font-size: large
     border-bottom: 1px solid gray
     font-style: initial
     outline-style: none
