last change: add creatreOffer component

--- a/staff/nicolas-postigo/huertea-app/src/components/Home.sass
+++ b/staff/nicolas-postigo/huertea-app/src/components/Home.sass
@@ -1,25 +1,27 @@
-.search_form
-    display: flex
-
-.searcher
-    border: 2px solid black
-    width: 65vw
-    border-radius: 15px
-    height: 25px
-
 .homebuttons
-    display: subgrid
     height: 5vh
-    width: 30vw
+    margin: 2vw
     border: none
     background-color: #a9e78e
     color: white
+    font-size: large
     border-bottom: 1px solid gray
     font-style: initial
     outline-style: none
     &:hover
         font-weight: bold
 
+
+.searcher
+    margin-left: 10vw
+    margin-right: 10vw
+    border: 2px solid black
+    border-radius: 15px
+    height: 25px
+    align-items: center
+    justify-content: center
+    margin-left: 10vw
+    margin-right: 10vw
 
 
 .search_form
