--- a/staff/nicolas-postigo/huertea-app/src/components/Hub.sass
+++ b/staff/nicolas-postigo/huertea-app/src/components/Hub.sass
@@ -7,23 +7,6 @@
     border-radius: 15px
     height: 25px
 
-.hubbuttons
-    display: flex
-    justify-content: flex-start
-    flex-direction: row
-    height: 5vh
-    margin: 2vw
-    border: none
-    background-color: #a9e78e
-    color: white
-    font-size: large
-    border-bottom: 1px solid gray
-    font-style: initial
-    outline-style: none
-    &:hover
-        font-weight: bold
-
-
 
 .search_form
     margin: 20px
@@ -36,3 +19,11 @@
     width: 17vw
     font-size: 100%
     border: 2px solid brown
+
+.offer
+    width: 40vw
+    height: 3.5vh
+    border-radius: 15px  
+    background-color: #62ccd8
+    color: white
+    font-size: 100%
